--- a/lab1/index.html
+++ b/lab1/index.html
@@ -15,7 +15,7 @@
         </div>
         <div>
             <h1>Arsenii Dobrovolskyi</h1>
-            <p>English Tutor</p>
+            <h3>Summary</h3>
             <hr>
             <p>Private English tutor with 6 years of experience. Currently studying IT field to become a
                 professional Frontend developer in the future.</p>
@@ -35,7 +35,7 @@
         </section>
         <section>
             <!-- Skills -->
-            <h3>Skills</h3>
+            <h3>Skill Highlights</h3>
             <hr>
             <ul>
                 <li>Public speaking</li>
@@ -116,9 +116,9 @@
             </div>
         </section>
         <section>
-            <!-- Certificates and awards -->
+            <!-- Certifications -->
             <div>
-                <h3>Certificates and awards</h3>
+                <h3>Certifications</h3>
                 <hr>
             </div>
             <div>
@@ -158,7 +158,7 @@
         <div>
             &copy; 2022
         </div>
-        <div><a href="./sample.html" target="_blank">Look at CV sample</a></div>
+        <div><a href="./img/cv_template.jpg" target="_blank">Look at CV sample</a></div>
     </footer>
 </body>
 
